# llm-embed-ollama

./: README.md  llm_embed_ollama.py  pyproject.toml
.github/workflows/: publish.yml
tests/: test_embed_ollama.py
